# Advent-of-Code-2023

./: README.md  pyproject.toml
data/day_3/: day3b.csv
src/app/: main.py
src/app/day_1/: __init__.py
src/app/day_2/: __init__.py
src/app/day_3/: __init__.py
src/app/day_4/: __init__.py
src/app/day_5/: __init__.py
src/app/static/: style.css
src/app/templates/: main.html
